<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.testtask.AddProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:hint="@string/name_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/etAge"
            android:hint="@string/age_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:inputType="number"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:hint="@string/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:inputType="phone" />

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbMale"
                android:text="@string/sex_field_m"
                android:textSize="18dp"
                android:checked="true"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cbFemale"
                android:text="@string/sex_field_f"
                android:textSize="18dp"
                android:checked="false"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:onClick="back_to_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_main"
                android:layout_weight="1"
                android:textSize="18dp" />

            <Button
                android:onClick="add_coworkers_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button"
                android:layout_weight="1"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
